invalid_label_sym_sym_arg_keywords_test/invalid_label_sym_sym_arg_keywords_test_15.src
.IPPcode24
JUMPIFNEQ label1 int@a bool